--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-TESTING
+<!DOCTYPE html>
+<html lang="eng">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WDD 230 - Tulio Banegas</title>
+    <meta name="description" content="Assignment portal for Tulio Banegas in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.css">
+</head>
+<body>
+    <header>
+        <img src="images/tulio.jpg" alt="Tulio Banegas">
+        <h1>Tulio Ricardo Banegas</h1>       
+    </header>
+    <main>
+        <h2>WDD 230: Assignment Portal</h2>
+        <ul>
+            <li>Lesson 02:<a href="#">Title</a></li>
+            <li>Lesson 03:<a href="#">Title</a></li>
+            <li>Lesson 04:<a href="#">Title</a></li>
+            <li>Lesson 05:<a href="#">Title</a></li>
+            <li>Lesson 06:<a href="#">Title</a></li>
+            <li>Lesson 07:<a href="#">Title</a></li>
+            <li>Lesson 08:<a href="#">Title</a></li>
+            <li>Lesson 09:<a href="#">Title</a></li>
+            <li>Lesson 10:<a href="#">Title</a></li>
+            <li>Lesson 11:<a href="#">Title</a></li>
+        </ul>
+    </main>
+    <footer>
+        <p class="parrafo">&copy; 2022 .:|:. Tulio Ricardo Banegas .:|:. Honduras</p>
+        <p class="parrafodos">Last Updated: <span id="last-updated"></span></p>
+    </footer>
+    <script src="scripts/lastupdated.js"></script>
+</body>
+</html>
