--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -9,28 +9,35 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="styles/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital@0;1&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/medium.css">
+    <link rel="stylesheet" href="styles/small.css">
 </head>
 <body>
     <header>
-        <img src="images/tulio.jpg" alt="Tulio Banegas">
-        <h1>Tulio Ricardo Banegas</h1>       
+        <h1>Website Planning Document</h1> 
+        <h2>Tulio Ricardo Banegas</h1>     
     </header>
+    <nav>
+        <div><a href="index.html">Home</a></div>
+        <div><a href="target-audience.html">Target Audience</a></div>
+        <div><a href="color-scheme.html">Color Scheme</a></div>
+        <div><a href="typography.html">Typhography</a></div>
+    </nav>
     <main>
-        <h2>WDD 230: Assignment Portal</h2>
-        <ul>
-            <li>Lesson 02: <a href="lesson2/design-principles.html">Design principles</a></li>
-            <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
-            <li>Lesson 04: <a href="#">Title</a></li>
-            <li>Lesson 05: <a href="#">Title</a></li>
-            <li>Lesson 06: <a href="#">Title</a></li>
-            <li>Lesson 07: <a href="#">Title</a></li>
-            <li>Lesson 08: <a href="#">Title</a></li>
-            <li>Lesson 09: <a href="#">Title</a></li>
-            <li>Lesson 10: <a href="#">Title</a></li>
-            <li>Lesson 11: <a href="#">Title</a></li>
-        </ul>
+        <section>
+            <h3>Target Audience Description</h3>
+            <p>The target audience are a group of small business entrepreneurs looking to expand their business through our services</p>
+        </section>
+        <section>
+            <h3>Personas</h3>
+            <p>Persona 1</p>
+            <p>Persona 2</p>
+        </section>
+        <section>
+            <h3>Scenarios</h3>
+            <p>People will find the effective way and the requirements to be able to be part of the team and progress</p>
+        </section>
     </main>
     <footer>
         <p class="parrafo">&copy; 2022 .:|:. Tulio Ricardo Banegas .:|:. Honduras</p>
