Target Audience Updated

--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -28,15 +28,64 @@
         <section>
             <h3>Target Audience Description</h3>
             <p>The target audience are a group of small business entrepreneurs looking to expand their business through our services</p>
+            <h4>Scenarios</h4>
+            <p>
+                <ul>
+                    <li>People will find the effective way and the requirements to be able to be part of the team and progress</li>
+                    <li>They are planning to save for later opening a new location, but they don't know how they could facilitate those procedures without a cumbersome waiting process.</li>
+                    <li>The fear of opening a business in the country is often due to crime and extortion, the fact of having support to be able to enjoy greater benefits facilitates trade in the country without losses in a great way.</li>
+                </ul>
+            </p>
         </section>
         <section>
             <h3>Personas</h3>
-            <p>Persona 1</p>
-            <p>Persona 2</p>
+            <h4>Persona 1:</h4>
+            <h4>Fictional Name:</h4>
+            <p>Ismael Alberto</p>
+            <h4>Job Title:</h4>
+            <p>Bachelor of customs administration</p>
+
+            <h4>Demographics:</h4>
+            <p>
+                <ul>
+                    <li>32 years old</li>
+                    <li>Married</li>
+                    <li>No children, but 2 younger siblings</li>
+                    <li>
+                        Currently taking a cooking course
+                    </li>
+                </ul>
+            </p>
+
+            <h4>Goals and Tasks:</h4>
+            <p>
+                He opened a business 3 years ago but the results have been variable and he has not achieved growth. His goal is to be able to take his franchise to the whole country and for it to be enjoyed by the general public.
+            </p>
         </section>
         <section>
-            <h3>Scenarios</h3>
-            <p>People will find the effective way and the requirements to be able to be part of the team and progress</p>
+            <h3>Personas</h3>
+            <h4>Persona 2:</h4>
+            <h4>Fictional Name:</h4>
+            <p>Mariana Valeria</p>
+            <h4>Job Title:</h4>
+            <p>Degree in psychology</p>
+
+            <h4>Demographics:</h4>
+            <p>
+                <ul>
+                    <li>27 years old</li>
+                    <li>Single</li>
+                    <li>No children</li>
+                    <li>
+                        She opened a beauty salon with her sister
+                    </li>
+                </ul>
+            </p>
+
+            <h4>Goals and Tasks:</h4>
+            <p>
+                The opening of the salon has brought a lot of clientele to them, but her goal is to be able to offer this same service to many people in her country or region.
+            </p>
         </section>
     </main>
     <footer>
