--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Assignment portal for Tulio Banegas in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" href="favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=IM+Fell+French+Canon+SC|Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:wght@400&display=swap" rel="stylesheet">
