Update Catracho Site

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -17,6 +17,7 @@
 </head>
 <body>
     <header>
+        <div id="banner">🤝🏼 Come join us for the Catracho meet and greet <strong>Wednesday at 7:00 p.m. </strong><button id="close">x</button></div>
         <div class="head" id="head-id">
         <div class="head-one">
 
@@ -73,7 +74,11 @@
     <main>
         <div class="content">
             <section class="site-name">
-                Hero with site name and call the action
+                <h1 class="site-name-1">Welcome to Catracho</h1>
+                <picture>
+                    <img src="images/catracho.jpg" alt="Chamber Commerce">
+                </picture>
+                <a class="site-name-2" href="#">Join the Chamber</a>
             </section>
             <div class="site-column">
                 <section class="event">
@@ -87,7 +92,8 @@
                 </section>
             </div>  
             <section class="Release">
-                News Release
+                <h2>News Release</h2>
+                <p>Find a quick, economical and effective solution to your commercial disputes of any kind, with specialized professionals and absolute confidentiality.</p>
             </section>
             <div class="spotlight">
                 <section class="spotlight-one">
@@ -119,7 +125,7 @@
             <div class="footer-address-two">
                 <p>info@cchamber.com</p>
                 <p>+(504)2222-0000</p>
-                <p>Location map</p>
+                <p>📍Location map</p>
             </div>      
         </div>     
         <div class="footer-two">
