--- a/chamber/index.html
+++ b/chamber/index.html
@@ -82,13 +82,20 @@
             </section>
             <div class="site-column">
                 <section class="event">
-                    Event
+                    <h2>Capacitaciones and Company</h2>
+                    <p>The event, the largest and most traditional in the commerce and services sector in my country <br><strong>more infor...</strong></p>
                 </section>
                 <section class="weather">
-                    Weather
+                        <h2>Weather</h2>
+                        <span >☁️ 28°C</span><br />
+                        <h3>Partly Cloudy</h3>
+                        <hr>
+                        <span>Wind Speed: 8.5 Km/h</span><br>
+                        <span>Wind Chill:  N/A</span>
                 </section>
                 <section class="join">
-                    Join
+                    <p>Discover how to be part of the Catracho Chamer of Commerce and see how we can help your business grow.</p>
+                    <a href="#">Join Us</a>
                 </section>
             </div>  
             <section class="Release">
@@ -97,13 +104,18 @@
             </section>
             <div class="spotlight">
                 <section class="spotlight-one">
-                    Spotlight 1
+                    <h2>✓ Registration and membership</h2>
+                    <p>Submit original deed, fill out income form and pay according to maximum authorized capital.</p>
+                    <hr>
+                    <p ><b>BANCO ATLÁNTIDA:</b>1202242606</p>
                 </section>
                 <section class="spotlight-two">
-                    Spotlight 2
+                    <h2>☞ Conciliation and Arbitration Center</h2>
+                    <p>Find a quick, economical and effective solution to your commercial disputes of any kind</p>
                 </section>
                 <section class="spotlight-three">
-                    Spotlight 3
+                    <h2>⛑ Job intermediation</h2>
+                    <p>We have an extensive database of candidates from different academic levels that we make available free of charge to affiliated companies.</p><hr>
                 </section>
             </div>
         </div>
