--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li>Lesson 04: <a href="chamber/index.html">Chamber Home Page Build</a></li>
             <li>Lesson 05: <a href="lesson5/bom.html">DOM Manipulation</a></li>
             <li>Lesson 06: <a href="#">Title</a></li>
-            <li>Lesson 07: <a href="#">Title</a></li>
+            <li>Lesson 07: <a href="lesson-7/lazyload.html">Progressive Loading of Images</a></li>
             <li>Lesson 08: <a href="#">Title</a></li>
             <li>Lesson 09: <a href="#">Title</a></li>
             <li>Lesson 10: <a href="#">Title</a></li>
