--- a/chamber/index.html
+++ b/chamber/index.html
@@ -56,7 +56,7 @@
         <nav>
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
                 <li class="active"><a href="#">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Contact</a></li>    
@@ -76,11 +76,15 @@
             <section class="site-name">
                 <h1 class="site-name-1">Welcome to Catracho</h1>
                 <picture>
-                    <!-- <img src="images/catracho.jpg" alt="Chamber Commerce"> -->
-                    <source media="(max-width: 481px)" srcset="images/wdd230-org-small.avif">
+                    <!-- <source media="(max-width: 481px)" srcset="images/wdd230-org-small.avif">
                     <source media="(max-width: 929px)" srcset="images/wdd230-org-medium.avif">
                     <source media="(min-width: 930px)" srcset="images/wdd230-org-large.avif">
-                    <img src="images/wdd230-org.avif" alt="Activity - Responsive Image ">
+                    <img src="images/wdd230-org.avif" alt="Activity - Responsive Image "> -->
+
+                    <source media="(max-width: 481px)" srcset="images/catracho-small.avif">
+                    <source media="(max-width: 929px)" srcset="images/catracho-medium.avif">
+                    <source media="(min-width: 930px)" srcset="images/catracho.avif">
+                    <img src="images/catracho.jpg" alt="Chamber Commerce">
                 </picture>
                 <a class="site-name-2" href="#">Join the Chamber</a>
             </section>
