update home link

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -56,6 +56,7 @@
         <nav>
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Discover</a></li>
                 <li class="active"><a href="#">Directory</a></li>
                 <li><a href="#">Join</a></li>
