--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li>Lesson 05: <a href="lesson5/bom.html">DOM Manipulation</a></li>
             <li>Lesson 06: <a href="#">Title</a></li>
             <li>Lesson 07: <a href="lesson-7/lazyload.html">Progressive Loading of Images</a></li>
-            <li>Lesson 08: <a href="#">Title</a></li>
+            <li>Lesson 08: <a href="lesson-8/tablebuild.html">HTML Table Build</a></li>
             <li>Lesson 09: <a href="#">Title</a></li>
             <li>Lesson 10: <a href="#">Title</a></li>
             <li>Lesson 11: <a href="#">Title</a></li>
