--- a/chamber/join.html
+++ b/chamber/join.html
@@ -77,7 +77,7 @@
 
      
         <div class="title-join">
-            <h1>Join with US</h1>
+            <h1>Join with Us</h1>
         </div>
         
         <div class="form">
