--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -57,9 +57,9 @@
             <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Discover</a></li>
-                <li class="active"><a href="#">Directory</a></li>
-                <li><a href="#">Join</a></li>
+                <li><a href="discover.html">Discover</a></li>
+                <li class="active"><a href="directory.html">Directory</a></li>
+                <li><a href="join.html">Join</a></li>
                 <li><a href="#">Contact</a></li>    
             </ul>
         </nav>   
