UPD card and list

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -70,14 +70,14 @@
        
         
     </header>
-    <main>
+    <main class="main-directory">
         <h1 class="directory-title">Chamber Directory</h1>
-        <div class="menu">
-            <input type="image" id="list" alt="list view" src="images/list2.png">
-            <input type="image" id="grid" alt="grid view" src="images/cards2.png">
+        <div class="directory-menu">
+            <input type="image" id="list" alt="list view" src="images/list2.png" onclick="show('list')">
+            <input type="image" id="grid" alt="grid view" src="images/cards2.png" onclick="show('card')">
         </div> 
-            <div class="directory"></div>
-            <div class="list" style="display: none;"></div>
+            <div class="directory" ></div>
+            <div class="list-directory" style="display: none;"></div>
     </main>
     <footer>
         <div class="logo-footer">
