--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li>Lesson 07: <a href="lesson-7/lazyload.html">Progressive Loading of Images</a></li>
             <li>Lesson 08: <a href="lesson-8/tablebuild.html">HTML Table Build</a></li>
             <li>Lesson 09: <a href="lesson-9/prophets.htm">Working with JSON data and the Fetch API</a></li>
-            <li>Lesson 10: <a href="#">Title</a></li>
+            <li>Lesson 10: <a href="lesson-10/weather-api.html">W10 Weather API</a></li>
             <li>Lesson 11: <a href="#">Title</a></li>
         </ul>
     </main>
