--- a/chamber/index.html
+++ b/chamber/index.html
@@ -96,10 +96,10 @@
                 </section>
                 <section class="weather">
                         <h2>Weather</h2>
-                        ☁️<span id="temperature">8</span>°C<br/>
-                        <h3>Partly Cloudy</h3>
+                        <img src="" alt="" id="weather-icon" /><span id="temperature"></span>°C<br/>
+                        <figcaption></figcaption>
                         <hr>
-                        Wind Speed: <span id="windSpeed">8</span> Km/h<br>
+                        Wind Speed: <span id="windSpeed"></span> Km/h<br>
                         Wind Chill: <span id="windChill"></span>
                 </section>
                 <section class="join">
