--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -32,7 +32,7 @@
             </div>
         
             <div class="social">
-                <a href="https://facebook.com"><svg enable-background="new 0 0 32 32" height="32px" id="Layer_1" version="1.0" viewBox="0 0 32 32" width="32px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                <a href="https://facebook.com"><svg enable-background="new 0 0 32 32" height="80px" id="Layer_1" version="1.0" viewBox="0 0 32 32" width="80px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g>
                             <path d="M32,30c0,1.104-0.896,2-2,2H2c-1.104,0-2-0.896-2-2V2c0-1.104,0.896-2,2-2h28c1.104,0,2,0.896,2,2V30z" fill="#3B5998" />
                             <path d="M22,32V20h4l1-5h-5v-2c0-2,1.002-3,3-3h2V5c-1,0-2.24,0-4,0c-3.675,0-6,2.881-6,7v3h-4v5h4v12H22z" fill="#FFFFFF" id="f" />
@@ -95,7 +95,14 @@
             </div>
             <fieldset class="fildset-contact">
                 <legend>Contact us</legend>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123836.48327039782!2d-87.26860139753657!3d14.083664199999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f6fa2d4b54a217b%3A0xe36cc8be7ecea4bd!2sC%C3%A1mara%20de%20Comercio%20e%20Industrias%20de%20Tegucigalpa!5e0!3m2!1ses!2shn!4v1669527920346!5m2!1ses!2shn" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div>
+                    <p>info@cchamber.com</p>
+                    <p>+(504)2222-0000</p>
+                    <p>📍Bulevar Centroamerica, Tegucigalpa</p>
+                </div>      
+                <div class="contact-map">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123836.48327039782!2d-87.26860139753657!3d14.083664199999994!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f6fa2d4b54a217b%3A0xe36cc8be7ecea4bd!2sC%C3%A1mara%20de%20Comercio%20e%20Industrias%20de%20Tegucigalpa!5e0!3m2!1ses!2shn!4v1669527920346!5m2!1ses!2shn"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>      
             </fieldset>
         </div>
     </main>
