--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -81,13 +81,13 @@
             </div>
         
             <div class="form-contact">
-            <form  method="get" action="thankyou.html">
+            <form  method="get" action="thankyou-contact.html">
             <fieldset>
                 <legend>Contact Form</legend>
                 <label class="top">First name *<input type="text" name="fname" required></label>
                 <label class="top">Last name *<input type="text" name="lname" required></label>
                 <label class="top">Email *<input type="email" name="email" placeholder="someone@gmail.com" required></label>
-                <label class="top">Phone *<input type="tel" name="phone" placeholder="1235551234"></label>
+                <label class="top">Phone<input type="tel" name="phone" placeholder="1235551234"></label>
             </fieldset>
             <input type="hidden" name="dateandtime" id="value-date">
             <input type="submit" value="Submit" class="submitBtn">
@@ -121,7 +121,7 @@
             <div class="footer-address-two">
                 <p>info@cchamber.com</p>
                 <p>+(504)2222-0000</p>
-                <p>📍Location map</p>
+                <p>📍<a href="https://www.google.com/maps/place/C%C3%A1mara+de+Comercio+e+Industrias+de+Tegucigalpa/@14.0836642,-87.1859111,17z/data=!3m1!4b1!4m5!3m4!1s0x8f6fa2d4b54a217b:0xe36cc8be7ecea4bd!8m2!3d14.0836795!4d-87.1858878"> Location map</a></p>
             </div>      
         </div>     
         <div class="footer-two">
