--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -58,7 +58,7 @@
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
-                <li class="active"><a href="#">Directory</a></li>
+                <li class="active"><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="contact.html">Contact</a></li>    
             </ul>
@@ -72,7 +72,7 @@
        
         
     </header>
-    <main>
+    <main class="main-thanks">
         <div class="thankyou">
             <h1>Catracho Chamber Application</h1>
             <p>Thank you for completing the information, we will be contacting you soon so that you can receive the benefits of the service obtained.</p>
@@ -93,7 +93,7 @@
             <div class="footer-address-two">
                 <p>info@cchamber.com</p>
                 <p>+(504)2222-0000</p>
-                <p>📍Location map</p>
+                <p>📍<a href="https://www.google.com/maps/place/C%C3%A1mara+de+Comercio+e+Industrias+de+Tegucigalpa/@14.0836642,-87.1859111,17z/data=!3m1!4b1!4m5!3m4!1s0x8f6fa2d4b54a217b:0xe36cc8be7ecea4bd!8m2!3d14.0836795!4d-87.1858878"> Location map</a></p>
             </div>      
         </div>     
         <div class="footer-two">
