--- a/FinalProject/fresh/fresh.html
+++ b/FinalProject/fresh/fresh.html
@@ -10,10 +10,10 @@
 
 
     <!-- STYLE SHEETS -->
-    <link href="../CSS/normalize.css" rel="stylesheet">
-    <link href="../CSS/small.css" rel="stylesheet">
-    <link href="../CSS/medium.css" rel="stylesheet">
-    <link href="../CSS/large.css" rel="stylesheet">
+    <link href="../css/normalize.css" rel="stylesheet">
+    <link href="../css/small.css" rel="stylesheet">
+    <link href="../css/medium.css" rel="stylesheet">
+    <link href="../css/large.css" rel="stylesheet">
     <link href="css/fresh.css" rel="stylesheet">
 
 </head>
