--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
      <!-- STYLE SHEETS -->
-    <link href="CSS/normalize.css" rel="stylesheet">
-    <link href="CSS/small.css" rel="stylesheet">
-    <link href="CSS/medium.css" rel="stylesheet">
-    <link href="CSS/large.css" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/small.css" rel="stylesheet">
+    <link href="css/medium.css" rel="stylesheet">
+    <link href="css/large.css" rel="stylesheet">
 
 </head>
 
