--- a/FinalProject/fresh/fresh.html
+++ b/FinalProject/fresh/fresh.html
@@ -122,7 +122,7 @@
             </div>
         </footer>
 
-        <script src="../JS/events.js"></script>
+        <script src="../js/events.js"></script>
         <script src="../../scripts/lastupdated.js"></script>
         <script src="js/fresh.js"></script>
     </div>
