--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -83,7 +83,7 @@
             </div>
         </footer>
 
-        <script src="JS/events.js"></script>
+        <script src="js/events.js"></script>
         <script src="../scripts/lastupdated.js"></script>
     </div>
 </body>
