--- a/FinalProject/fresh/fresh.html
+++ b/FinalProject/fresh/fresh.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Final Proyect">
     <meta name="author" content="Tulio Banegas">
-    <title>About US</title>
+    <title>Fresh</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 
@@ -59,10 +59,13 @@
                             <input type="tel" name="phone" placeholder="###-###-####" required></label>
                 </fieldset>
                 <label class="info">
-                    Genus Type:
-                    <select  name="Storm-region" id="genus" onchange="selectResponse()" required>
-                        
-                    </select>
+                    Fruit Type:
+                    <select  name="Storm-region" id="genus" onchange="selectResponse()" required></select>
+                    <br>
+                    <select  name="Storm-region" id="genus2" onchange="selectResponse()" required></select>
+                    <br>
+                    <select  name="Storm-region" id="genus3" onchange="selectResponse()" required></select>
+                    <br>
                 </label>
 
                 <fieldset>
