--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -78,7 +78,7 @@
 
             <div>
                 <h4>Site Plan</h4>
-                <a href="PAGES/SITE_PLAN/site-plan.html" target="_blank"><img src="images/Logo.png" style="width: 60px; height: 60px;" alt="Image logo" /></a>
+                <a href="#" target="_blank"><img src="images/Logo.png" style="width: 60px; height: 60px;" alt="Image logo" /></a>
 
             </div>
         </footer>
