--- a/FinalProject/fresh/fresh.html
+++ b/FinalProject/fresh/fresh.html
@@ -44,7 +44,7 @@
     <div id="father-box-home">
         <!-- CONTENT HERE -->
         <main class="container-home-contra">
-            <form method="get" action="thanks.html" class="form-contra">
+            <form method="get" action="fresh.html" class="form-contra">
                 <fieldset>
                     <h3>Personal Information</h3>
                     <label class="info">
@@ -60,11 +60,11 @@
                 </fieldset>
                 <label class="info">
                     Fruit Type:
-                    <select  name="Storm-region" id="genus" onchange="selectResponse()" required></select>
+                    <select  name="Storm-region" id="genus"   required></select>
                     <br>
-                    <select  name="Storm-region" id="genus2" onchange="selectResponse()" required></select>
+                    <select  name="Storm-region" id="genus2"  required></select>
                     <br>
-                    <select  name="Storm-region" id="genus3" onchange="selectResponse()" required></select>
+                    <select  name="Storm-region" id="genus3"  required></select>
                     <br>
                 </label>
 
