--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -48,7 +48,10 @@
                     <div class="laguna-beach">
                         <p></p>
                         <img class="img-laguna" src="images/us-traveler-Colorful-sunrise-on-Coronado-Island.jpg" alt="Costa del sur">
+                        
+                            <a href="fresh/fresh.html">Mix Fruit</a>
                     </div>
+
                 </div>
             </div>
             <br>
