--- a/FinalProject/aboutus/aboutus.html
+++ b/FinalProject/aboutus/aboutus.html
@@ -11,7 +11,7 @@
 
     <!-- STYLE SHEETS -->
     <link href="../css/normalize.css" rel="stylesheet">
-    <link href="../csssmall.css" rel="stylesheet">
+    <link href="../css/small.css" rel="stylesheet">
     <link href="../css/medium.css" rel="stylesheet">
     <link href="../css/large.css" rel="stylesheet">
     <link href="aboutus.css" rel="stylesheet">
