--- a/FinalProject/fresh/fresh.html
+++ b/FinalProject/fresh/fresh.html
@@ -58,15 +58,19 @@
                         Phone:
                             <input type="tel" name="phone" placeholder="###-###-####" required></label>
                 </fieldset>
-                <label class="info">
-                    Fruit Type:
-                    <select  name="Storm-region" id="genus"   required></select>
-                    <br>
-                    <select  name="Storm-region" id="genus2"  required></select>
-                    <br>
-                    <select  name="Storm-region" id="genus3"  required></select>
-                    <br>
-                </label>
+                <fieldset>
+                    <label class="info">
+                        Fruit Type:
+                        <select  name="Storm-region" id="genus"   required></select>
+                        <br>
+                        <select  name="Storm-region" id="genus2"  required></select>
+                        <br>
+                        <select  name="Storm-region" id="genus3"  required></select>
+                        <br>
+                    </label>
+
+                </fieldset>
+
 
                 <fieldset>
                     <br>
