--- a/FinalProject/aboutus/aboutus.html
+++ b/FinalProject/aboutus/aboutus.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <meta name="description" content="Final Proyect">
     <meta name="author" content="Tulio Banegas">
     <title>About US</title>
@@ -29,6 +31,11 @@
             <h1 id="title-site">BEAUTIFUL FOODS</h1>
             <br>
             <h3 id="motto">Distributor.</h3>
+        </div>
+        <div class="social-media">
+            <a href="https://facebook.com" class="fa fa-facebook"></a>
+            <a href="https://twitter.com" class="fa fa-twitter"></a>
+            <a href="https://instagram.com" class="fa fa-instagram"></a>
         </div>
         <!-- NAVIGATION HERE -->
         <nav>
