--- a/FinalProject/fresh/fresh.html
+++ b/FinalProject/fresh/fresh.html
@@ -51,11 +51,11 @@
     <div id="father-box-home">
         <!-- CONTENT HERE -->
         <main class="container-home-contra">
-            <form method="get" action="fresh.html" class="form-contra">
+            <form method="get" action="fresh.html" class="form-contra" >
                 <fieldset>
                     <h3>Personal Information</h3>
                     <label class="info">
-                        Full name:
+                        First name:
                             <input  type="name" name="name" placeholder="Tuio Ricardo Banegas" pattern="([a-zA-Z-]{1,})([' ']?)([a-zA-Z-]{4,})([' ']?)([a-zA-Z-]{0,})" required>
                     </label>
                     <label class="info">
@@ -86,11 +86,11 @@
                     <br>
                     <br>
                 </fieldset>
+                <BR></BR>
+                <button type="submit" class="submitBtn" onclick="displayfresh()">Submit Information</button>
                 <div id="line-top"></div>
-                <div id="first"></div><input type="submit" value="Submit Information" class="submitBtn">
-                <div id="second"></div>
-                <div id="line-bottom"></div>
             </form>
+            
             <div class="principal5">
                 <div class="cuzmel-contact-us">
                     <div class="cuzmel-contact-us">
@@ -135,10 +135,9 @@
 
             </div>
         </footer>
-
-        <script src="../js/events.js"></script>
-        <script src="../../scripts/lastupdated.js"></script>
+ 
         <script src="js/fresh.js"></script>
+        <script src="../../scripts/lastupdated.js"></script>
     </div>
 </body>
 
