--- a/FinalProject/fresh/fresh.html
+++ b/FinalProject/fresh/fresh.html
@@ -87,7 +87,7 @@
                     <br>
                 </fieldset>
                 <BR></BR>
-                <button type="submit" class="submitBtn" onclick="displayfresh()">Submit Information</button>
+                <button type="submit" class="submitBtn" onclick="displayfresh();">Submit Information</button>
                 <div id="line-top"></div>
             </form>
             
