Update frontend II

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <main>
         <h2>WDD 230: Assignment Portal</h2>
         <ul>
+            <li>Final Project FrontEnd II <a href="https://tulio1990.github.io/projecttulio/">Final Project FRONTENTD II</a></li>
             <li>Lesson 02: <a href="lesson2/design-principles.html">Design principles</a></li>
             <li>Lesson 03: <a href="lesson3/index.html">Website Planning Document</a></li>
             <li>Lesson 04: <a href="chamber/index.html">Chamber Home Page Build</a></li>
@@ -30,6 +31,8 @@
             <li>Lesson 09: <a href="lesson-9/prophets.htm">Working with JSON data and the Fetch API</a></li>
             <li>Lesson 10: <a href="lesson-10/weather-api.html">W10 Weather API</a></li>
             <li>Lesson 11: <a href="FinalProject/index.html">Final Project - Bountiful Foods</a></li>
+            <li>SleepOutSide: <a href="https://earnest-marshmallow-2bedd0.netlify.app/">SleepOutSide</a></li>
+            
         </ul>
     </main>
     <footer>
