--- a/FinalProject/fresh/fresh.html
+++ b/FinalProject/fresh/fresh.html
@@ -51,12 +51,12 @@
     <div id="father-box-home">
         <!-- CONTENT HERE -->
         <main class="container-home-contra">
-            <form method="get" action="fresh.html" class="form-contra" >
+            <form method="get" id="form-prueba" class="form-contra" >
                 <fieldset>
                     <h3>Personal Information</h3>
                     <label class="info">
                         First name:
-                            <input  type="name" name="name" placeholder="Tuio Ricardo Banegas" pattern="([a-zA-Z-]{1,})([' ']?)([a-zA-Z-]{4,})([' ']?)([a-zA-Z-]{0,})" required>
+                            <input  type="name" name="name" id="name" placeholder="Tuio Ricardo Banegas" pattern="([a-zA-Z-]{1,})([' ']?)([a-zA-Z-]{4,})([' ']?)([a-zA-Z-]{0,})" required>
                     </label>
                     <label class="info">
                         eMail:
@@ -87,7 +87,7 @@
                     <br>
                 </fieldset>
                 <BR></BR>
-                <button type="submit" class="submitBtn" onclick="displayfresh();">Submit Information</button>
+                <button type="submit" class="submitBtn">Submit Information</button>
                 <div id="line-top"></div>
             </form>
             
